small jiras fixed including table alignment and text. changes made to areasettings.js so these need to be put into the components by laurent

--- a/src/style.css
+++ b/src/style.css
@@ -15,6 +15,9 @@
 	stroke: currentColor;
 }
 
+.tblHeader{
+  text-align: right
+}
 /*road dataset*/
 /*-- tooltip --*/
 .linecursor {
